--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,12 @@
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    // "allowJs": true,
+    // "allowImportingTsExtensions": true,
+    // "noEmit": true,
+  
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules"]
+  // "include": ["src/**/*"], 
+  // "exclude": ["node_modules"]
 }
