prac- sse server + express

--- a/package.json
+++ b/package.json
@@ -10,16 +10,22 @@
     "vinit-mcp": "./dist/index.js"
   },
   "scripts": {
-    "dev": "node src/index.ts",
-    "build": "tsc && chmod 755 dist/index.js",
-    "build2": "tsc && chmod 755 dist/m2-index.js"
+    "dev": "nodemon --watch src --ext ts --exec \"node --loader ts-node/esm\" src/prac/sse-server-mcp.ts",
+    "build-prac": "tsc && chmod 755 dist/{prac/m1-index,prac/m2-index,prac/sse-server-mcp}.js"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.10.1",
+    "@types/express": "^5.0.1",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
     "zod": "^3.24.3"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/node": "^22.14.1",
+    "concurrently": "^9.1.2",
+    "nodemon": "^3.1.10",
+    "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   },
   "keywords": [
