--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "vinit-mcp": "./dist/index.js"
   },
   "scripts": {
-    "dev": "nodemon --watch src --ext ts --exec \"node --loader ts-node/esm\" src/prac/sse-server-mcp.ts",
-    "build-prac": "tsc && chmod 755 dist/{prac/m1-index,prac/m2-index,prac/sse-server-mcp}.js"
-  },
+  "dev": "nodemon --watch src --ext ts --exec \"node --loader ts-node/esm\" src/prac/sse-server-mcp.ts",
+  "build-prac": "tsc && chmod 755 dist/{prac/m1-index,prac/m2-index,prac/sse-server-mcp}.js",
+  "inspector": "npx @modelcontextprotocol/inspector"
+},
+
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.10.1",
     "@types/express": "^5.0.1",
